--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alan's To-Do App</title>
+    <title>AI Meal Generator App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h2>To-Do List</h2>
+  <body id="background">
+    <h2 id="title">AI Meal Generator</h2>
     <div>
-      <input type="text" , id="task" placeholder="Enter a task" />
+      <input type="text" id="task" placeholder="Enter an ingredient" />
       <button onClick="addTask()">Add</button>
-    </div>
-    <div>
       <ul id="list"></ul>
+      <button onclick="generateMeal()">GENERATE</button>
     </div>
     <script src="script.js"></script>
   </body>
