main functionality of app complete!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,9 +10,12 @@
     <h2 id="title">AI Meal Generator</h2>
     <div>
       <input type="text" id="task" placeholder="Enter an ingredient" />
-      <button onClick="addTask()">Add</button>
+      <button onClick="addIngredient()">Add</button>
       <ul id="list"></ul>
       <button onclick="generateMeal()">GENERATE</button>
+      <br />
+      <br />
+      <div id="AIResponse"></div>
     </div>
     <script src="script.js"></script>
   </body>
